--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
+                    <h2> My Profile:</h2>
                 </div>
             </div>
             <!-- /.row -->
