changed strong tag

--- a/index.html
+++ b/index.html
@@ -127,9 +127,20 @@ B.S. in Web and Information Systems, Expected Graduation: May 2019
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Work Experience</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>Work Experience :(2016-2017)
+RU-Next Program, Newark, NJ
+Job Position: College Mentor
+•   Introduced campus resources to incoming freshman students for them to utilize throughout their college experience.
+•   Assisted teacher by overlooking a class of 26 students.
+•   Created exams to test their knowledge in High School Math.
+
+Volunteer Experience: (2015-2016)
+Hillside Public Library, Hillside, NJ:
+•   Volunteered as a chess tutor
+•   Met on a weekly basis, more specifically every Saturday, with a group of 10 instructing them on the rules of chess.
+</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
