edited strong tags paragraph tag

--- a/index.html
+++ b/index.html
@@ -151,9 +151,26 @@ Hillside Public Library, Hillside, NJ:
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Service Name</strong>
+                                    <strong>Projects:</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p>•    3 Page Website
+-   Used unordered lists to make a navigation list for the main menu
+-   Edited the title tag on the page to change the title
+-   Used the University’s ssh server to publish the website
+Tool: Vim Editor and git.
+URL: https://web.njit.edu/~aia7/messi/html5-boilerplate/src/
+Github Link: https://github.com/aia7/HistoryoftheInternet
+
+•   5 Page Website
+-   Used the Z-Layout to setup the design of the webpage
+-   Implemented a navigational bar to navigate the website
+-   Incorporated a call to action button
+Tool: Vim Editor and git.
+URL: https://web.njit.edu/~aia7/FinalProject/webdesign1/src/
+Github Link: https://github.com/aia7/FinalProject
+
+
+</p>
                                 <a href="#" class="btn btn-light">Learn More</a>
                             </div>
                         </div>
