--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ Github Link: https://github.com/aia7/FinalProject
                         
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <
+                                <h3>Email:aia7@njit.edu
                             </div>
                         </div>
                         <div class="col-md-6">
