--- a/index.html
+++ b/index.html
@@ -195,7 +195,9 @@ Github Link: https://github.com/aia7/FinalProject
                         
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <h3>Email: <div>aia7@njit.edu <h3>
+                                <h3>Email: <div>aia7@njit.edu </h3> 
+                                <h3>Phone: 908-636-5633</h3>
+                                <h3>Address: 265 Ryan St. Hillside,NJ</h3>
                             </div>
                         </div>
                         
