--- a/index.html
+++ b/index.html
@@ -195,14 +195,11 @@ Github Link: https://github.com/aia7/FinalProject
                         
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <h3>Email: <div>aia7@njit.edu 
-                                Phone: 908-636-5633
+                                <h3>Email: <div>aia7@njit.edu <div>
+                                Phone: 908-636-5633 <div>
                                 Address: 265 Ryan St. Hillside,NJ</h3>
                             </div>
                         </div>
-                        
-                    <!-- /.row (nested) -->
-                    <center><a href="#" class="btn btn-dark">View More Items</a></center>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
