--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@ Github Link: https://github.com/aia7/FinalProject
                         
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <h3>Email: <div>aia7@njit.edu <div>
+                                <center><h3>Email: <div>aia7@njit.edu <div>
                                 Phone: 908-636-5633 <div>
-                                Address: 265 Ryan St. Hillside,NJ</h3>
+                                Address: 265 Ryan St. Hillside,NJ</h3></center>
                             </div>
                         </div>
                 </div>
