--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@ Github Link: https://github.com/aia7/FinalProject
                     <div class="row">
                         
                         <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <center><h3>Email: <div>aia7@njit.edu <div>
+                            <center><div class="portfolio-item">
+                                <h3>Email: <div>aia7@njit.edu <div>
                                 Phone: 908-636-5633 <div>
-                                Address: 265 Ryan St. Hillside,NJ</h3></center>
-                            </div>
+                                Address: 265 Ryan St. Hillside,NJ</h3>
+                            </div></center>
                         </div>
                 </div>
                 <!-- /.col-lg-10 -->
