--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     <header id="top" class="header">
         <div class="text-vertical-center">
             <h1>My Portfolio: <div> Antonio Altamirano</h1>
-            <h3>Web Developer</h3>
+            <h3>Web Developer <div> Email: <div>aia7@njit.edu <div>
+                                Phone: 908-636-5633 <div>
+                                Address: 265 Ryan St. Hillside,NJ</h3></h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
@@ -193,14 +195,7 @@ Github Link: https://github.com/aia7/FinalProject
                     <hr class="small">
                     <div class="row">
                         
-                        <div class="col-md-6">
-                            <div class="portfolio-item">
-                                <h3>Email: <div>aia7@njit.edu <div>
-                                Phone: 908-636-5633 <div>
-                                Address: 265 Ryan St. Hillside,NJ</h3>
-                            </div>
-                        </div>
-                </div>
+                    
                 <!-- /.col-lg-10 -->
             </div>
             <!-- /.row -->
